# monopoly_strategy_llm

./: .env.example  .gitignore  CHANGELOG.md  README.md  judge_output_eval_trade_balanced.json  pytest.ini
docs/llm_platform/: README.md  (+1 more)
src/python/: README.md  pyproject.toml
src/python/src/Monopoly/: __init__.py  bootstrap.py
src/python/src/Monopoly/LlmEvaluation/Application/Service/: EvaluateTradeWithJudgeService.py
src/python/src/Monopoly/LlmEvaluation/Domain/Exception/: LlmEvaluationErrors.py
src/python/src/Monopoly/LlmEvaluation/Domain/Model/: JudgeEnums.py  JudgeValidationError.py
src/python/src/Monopoly/LlmEvaluation/Domain/Port/: JudgeArtifactRecorder.py  LlmClient.py  SemanticResponseAssessor.py  SpecificationRepository.py
src/python/src/Monopoly/LlmEvaluation/Domain/Service/: FallbackEligibilityChecker.py  GeneratedStaticAlgorithmEvidenceValidator.py  JudgeOutputSchemaValidator.py  JudgeOutputValidator.py  JudgePromptBuilder.py  JudgeResponseParser.py  JudgeValidationErrorFactory.py  SpecificationAttachmentFormatter.py  SpecificationBundleBuilder.py  SpecificationManifestBuilder.py  StaticAlgorithmEvidenceSchema.py  StaticAnalysisModeResolver.py  SuppliedEvidenceValidator.py
src/python/src/Monopoly/LlmEvaluation/Infrastructure/Anthropic/: ClaudeLlmClient.py
src/python/src/Monopoly/LlmEvaluation/Infrastructure/Artifact/: DefaultJudgeArtifactRecorder.py  JudgeArtifactWriter.py
src/python/src/Monopoly/LlmEvaluation/Infrastructure/Cursor/: CursorExecutionWorkspace.py  CursorFileRetriever.py  CursorLegacyProseRecovery.py  CursorLlmClient.py  CursorResponseMapper.py  CursorTransportConstants.py  CursorTransportDiagnostics.py  CursorTransportEnvelopeParser.py  CursorTransportError.py  CursorTransportInstruction.py  CursorTransportNormalizer.py  CursorWorkspacePathResolver.py
src/python/src/Monopoly/LlmEvaluation/Infrastructure/Google/: GeminiLlmClient.py
src/python/src/Monopoly/LlmEvaluation/Infrastructure/Json/: JudgeInputMapper.py  JudgeOutputSerializer.py  JudgeRequestMapper.py
src/python/src/Monopoly/LlmEvaluation/Infrastructure/OpenAi/: OpenAiLlmClient.py
src/python/src/Monopoly/Shared/Domain/: StrEnumCompat.py
src/python/src/Monopoly/Shared/Infrastructure/: ArtifactStore.py  EnvironmentLoader.py
(+263 files in other folders)
