[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monopoly-static-evaluation"
version = "1.2.0"
description = "Reference implementation of the Monopoly Static Trade Imbalance Evaluator and LLM Judge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
cursor = [
    "cursor-sdk>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../test/python/unit", "../../test/python/integration"]
testpaths = ["../../test/python"]
python_files = ["test*.py"]
python_functions = ["test_*"]
markers = [
    "integration: integration tests requiring external services (skipped when credentials missing)",
    "llm: tests involving LLM providers",
    "cursor: Cursor SDK integration tests",
]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
packages = ["Monopoly"]
mypy_path = "src"
